# main-service

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  start.sh
.github/workflows/: code-style.yaml  flake8-wemake.yaml  isort.yaml  lint.yaml  quality.yaml  style.yaml  test.yaml  testing.yaml  tests.yaml  wemake-python-styleguide.yml  worker.yml
app/: Dockerfile
app/code/: config.py  main.py
configs/authelia/: configuration.yml
configs/caddy/: Caddyfile
deployments/: .env.example  docker-compose.yml
deployments/elk/: docker-compose.yml
docs/: ITERATION-1.md
src/: .coverage  .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  pyproject.toml  requirements.dev.txt  requirements.txt
src/app/: cli.py  config.py  main.py  models.py
src/app/api/: __init__.py  constants.py  dependencies.py  models.py  schemas.py  services.py
src/app/api/career/: __init__.py  models.py  schemas.py  services.py  views.py
src/app/api/employees/: __init__.py  models.py  schemas.py  services.py  views.py
src/app/api/projects/: __init__.py  constants.py  models.py  schemas.py  services.py  views.py
src/app/api/users/: __init__.py  constants.py  models.py  schemas.py  services.py  views.py
src/app/cli/: __main__.py  db.py
src/app/core/: db.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 2204eeb6a106_.py  4c11561b01a0_.py  ca93ba7eb98f_.py
src/tests/: conftest.py
src/tests/integration/: conftest.py
src/tests/integration/api/: test_projects.py
src/tests/integration/projects/: test_projects.py
src/tests/integration/resources/: test_resources.py
src/tests/unit/: conftest.py  test_example.py
src/tests/unit/career/: test_grade.py  test_role.py  test_skill.py
src/tests/unit/employee/: test_employee.py
src/tests/unit/projects/: test_project.py
src/tests/unit/users/: test_user.py
