[tool.poetry]
name = "main-service"
version = "0.1.0"
description = ""
authors = ["belo4ya <41exey.kov41ev@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

# ---------------- TOOLS ----------------

#[tool.mypy]  #mypy
#
#[tool.black]  #black
#line-length = "110"
#
#[tool.pylint]  #pylint
#max-line-length = "110"
#
#[tool.bandit]  #bandit
#
#[tool.isort]  #isort
#profile = "black"
#line_length = "110"

# ---------------------------------------

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
