[tool.poetry]
name = "main-service"
version = "0.1.0"
description = ""
authors = [
    "belo4ya",
    "GeorgiyDemo",
    "shycoldii",
    "pppppplk",
    "ruki011",
    "Cat-in-box",
    "PolinaBrusova",
    "Osetinskiy-pokemon"
]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
loguru = "^0.6.0"
SQLAlchemy = "^1.4.42"
psycopg-binary = "^3.1.3"
psycopg2 = "^2.9.4"
alembic = "^1.8.1"
pydantic = { extras = ["dotenv"], version = "^1.10.2" }
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-trio = "^0.7.0"
httpx = "^0.23.0"
factory-boy = "^3.2.1"
flake8 = "^4"
wemake-python-styleguide = "^0.17.0"
pylint = "^2.15.5"
black = { extras = ["d"], version = "^22.10.0" }
isort = "^5.10.1"
bandit = "^1.7.4"
pre-commit = "^2.20.0"
mypy = "^0.982"
sqlalchemy2-stubs = "^0.0.2-alpha.29"

[tool.poetry.scripts]
example = "app.cli:example"

# ---------------- TOOLS ----------------

[tool.mypy]

[tool.black]
line-length = "110"

[tool.pylint]
max-line-length = "110"

[tool.bandit]

[tool.isort]
profile = "black"
line_length = "110"

[tool.pytest.ini_options]
markers = [
    """\
    use_case: \
    tests for local launch or in a special test environment (deselect with '-m \"not use_case\"')\
    """,
]

# ---------------------------------------

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
